apps/tools/portainer/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: portainer
  namespace: portainer

spec:
  replicas: 1

  selector:
    matchLabels:
      app: portainer

  template:
    metadata:
      labels:
        app: portainer

    spec:
      containers:
        - name: portainer

          image: portainer/portainer-ce:latest

          ports:
            - containerPort: 9000

          volumeMounts:
            - name: data
              mountPath: /data

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: portainer-data
