apps/tools/portainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portainer
  namespace: portainer

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - portainer.shopnoltd.dpdns.org
      secretName: wildcard-shopnoltd-tls

  rules:
    - host: portainer.shopnoltd.dpdns.org

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: portainer
                port:
                  number: 9000
